fixed homepage so content doesn't overflow. use the new homepage content.. added my cinema page too

--- a/speedymatch/WebContent/css/homepage.css
+++ b/speedymatch/WebContent/css/homepage.css
@@ -3,7 +3,8 @@
 
 body{
 	
-	background-image:url('../images/background.jpg');
+		background-image:url('../images/background.jpg');
+
 }
 
 #logoName{
@@ -69,6 +70,12 @@ body{
 	position:absolute;
 	top:100px;
 	left:0;
+	width:270px;
+	height:85%;
+	margin-top:-40px;
+	border-right-style:solid;
+	border-right-color:#555555;
+	border-right-width:2px;
 
 }
 
@@ -77,6 +84,7 @@ body{
 	position:relative;
 	left:300px;
 	margin-right:300px;
+	
 }
 
 .nav-fields{
